--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,18 +1,42 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
+	<meta charset="UTF-8">
     <title>Register</title>
+    <link rel="stylesheet" th:href="@{/css/register.css}">
+    <script th:inline="javascript">
+        // ページが読み込まれた時にメッセージが存在する場合はアラートを表示
+        const emailExists = /*[[${emailExists}]]*/ false;
+    </script>
+    <script src="/js/checkEmailExists.js"></script>
 </head>
 <body>
-    <h2>Register</h2>
-    <form th:action="@{/register}" method="post">
-        <label for="username">Username:</label><br>
-        <input type="text" id="username" name="username" required><br>
-        <label for="password">Password:</label><br>
-        <input type="password" id="password" name="password" required><br>
-        <label for="email">Email:</label><br>
-        <input type="email" id="email" name="email" required><br>
-        <input type="submit" value="Submit">
-    </form>
+    <div id="register" class="register-form-container">
+        <header>REGISTER</header>
+        <fieldset>
+            <form th:action="@{/register}" method="post">
+                <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
+                <div class="input-wrapper role">
+                    <label><input type="radio" id="user" name="role" value="user" required>User</label>
+                    <label><input type="radio" id="company" name="role" value="company" required>Company</label>
+                </div>
+                <div class="input-wrapper">
+                    <input type="text" id="username" name="username" placeholder="your name" required/>
+                </div>
+                <div class="input-wrapper">
+                    <input type="email" id="email" name="email" placeholder="your@email.com" required/>
+                </div>
+                <div class="input-wrapper">
+                    <input type="password" id="password" name="password" placeholder="password" required/>
+                </div>
+                <button type="submit" id="register-button">Submit</button>
+            </form>
+        </fieldset>
+        <div class="form-footer">
+            <form th:action="@{/login}" method="get">
+                <button type="submit">Return to Login</button>
+            </form>
+        </div>
+    </div>
 </body>
 </html>
