--- a/src/main/resources/templates/userDetail.html
+++ b/src/main/resources/templates/userDetail.html
@@ -38,7 +38,11 @@
                 <h1>Chat List</h1>
             </div>
             <div class="chat-list">
-                <!-- チャットリストの内容をここに追加 -->
+                <ul>
+                    <li th:each="chatInfo : ${ongoingChats}">
+                        <a href="javascript:void(0)" th:attr="onclick='startChat(' + ${chatInfo.companyId} + ')'" th:text="${chatInfo.companyName}"></a>
+                    </li>
+                </ul>
             </div>
         </div>
     </div>
@@ -82,6 +86,20 @@
     </div>
     <script th:src="@{/js/modal.js}"></script>
     <script>
+        function startChat(companyId) {
+            console.log("Starting chat with company ID:", companyId);
+            fetch(`/getChatGroupId?companyId=${companyId}`)
+                .then(response => response.json())
+                .then(data => {
+                    if (data && data.chatGroupId && data.chatGroupId !== -1) {
+                        window.location.href = `/chat?chatGroupId=${data.chatGroupId}`;
+                    } else {
+                        console.error('Error: chatGroupId not found');
+                    }
+                })
+                .catch(error => console.error('Error fetching chatGroupId:', error));
+        }
+
         document.getElementById('backButton').addEventListener('click', function() {
             window.location.href = '/userIndex';
         });
