--- a/src/main/resources/templates/userIndex.html
+++ b/src/main/resources/templates/userIndex.html
@@ -2,21 +2,17 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <head>
-	<meta charset="UTF-8">
-	<title>TopPage</title>
-	<link rel="stylesheet" th:href="@{/css/userIndex.css}">
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP:wght@200..900&display=swap" rel="stylesheet">
+<meta charset="UTF-8">
+<title>TopPage</title>
+<link rel="stylesheet" th:href="@{/css/userIndex.css}">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP:wght@200..900&display=swap" rel="stylesheet">
 </head>
-
 <body>
-	<header>
+    <header>
         <div class="header-left">
-            <a th:href="@{/userDetail}">
-                <img src="/img/user-icon.png" alt="User Detail">
-                <span>My Page</span>
-            </a>
+            <a th:href="@{/userDetail}"> <img src="/img/user-icon.png" alt="User Detail"> <span>My Page</span></a>
         </div>
         <div class="header-right">
             <form th:action="@{/logout}" method="post">
@@ -25,23 +21,28 @@
         </div>
     </header>
     <main>
-        <div class="search-container">
-            <input type="text" id="search" placeholder="企業名で検索">
-            <button type="button" onclick="searchCompanies()">検索</button>
-        </div>
-        <div class="filter-sort-container">
-            <button type="button">並び替え</button>
-            <button type="button">絞り込み条件</button>
+        <div class="search-sort-container">
+            <form th:action="@{/userIndex}" method="get" class="search-form">
+                <input type="text" name="search" id="search" placeholder="企業名で検索">
+                <button type="submit" class="button">検索</button>
+            </form>
+            <button type="button" class="button sort-button" onclick="showSortOptions()">並び替え</button>
+            <div id="sortOptions" class="sort-options" style="display: none;">
+                <form th:action="@{/userIndex}" method="get">
+                    <input type="hidden" name="search" th:value="${param.search}">
+                    <button type="submit" name="sortField" value="companyName" class="button">名前順</button>
+                    <button type="submit" name="sortField" value="address" class="button">住所順</button>
+                </form>
+            </div>
         </div>
         <div class="company-list" id="company-list">
-            <div th:each="company : ${companies}" class="company-card" onclick="showCompanyModal(this)">
+            <div th:each="company : ${companies}" class="company-card" th:data-company-id="${company.id}" onclick="showCompanyModal(this)">
                 <img th:src="@{/img/default-company.png}" alt="Company Image" class="company-image">
                 <h3 th:text="${company.companyName}"></h3>
                 <p th:text="${company.address}"></p>
             </div>
         </div>
     </main>
-    
     <div id="companyModal" class="modal">
         <div class="modal-content">
             <div class="modal-header">
@@ -49,18 +50,17 @@
                 <h2>Company Detail</h2>
             </div>
             <div class="modal-body">
+                <input type="hidden" id="modalCompanyId" value="">
                 <img id="modalCompanyImage" src="/img/default-company.png" alt="Company Image" class="modal-company-image">
                 <h3 id="modalCompanyName"></h3>
                 <p id="modalCompanyAddress"></p>
             </div>
             <div class="modal-footer">
-                <button id="chatButton" class="chat-button">Chat</button>
+                <button id="chatButton" class="chat-button" onclick="startChat()">Chat</button>
                 <button class="close-modal-button" onclick="closeModal()">Close</button>
             </div>
         </div>
     </div>
-
     <script th:src="@{/js/userIndex.js}"></script>
 </body>
-
 </html>
