--- a/src/main/resources/static/css/userDetail.css
+++ b/src/main/resources/static/css/userDetail.css
@@ -1,5 +1,5 @@
 body {
-    background: url('/img/background.png') no-repeat center center fixed;
+    background: url('/Matching/img/background.png') no-repeat center center fixed;
     background-size: cover;
     font-family: 'Noto Serif JP', serif;
     color: #333;
