--- a/src/main/resources/templates/companyDetail.html
+++ b/src/main/resources/templates/companyDetail.html
@@ -16,7 +16,7 @@
             </div>
             <div class="company-info">
                 <div class="company-image-container">
-                    <img src="/img/default-company.png" alt="Company Icon" class="company-icon">
+                    <img th:src="@{/img/default-company.png}" alt="Company Icon" class="company-icon">
                 </div>
                 <div class="company-details" th:if="${company != null}">
                     <p><strong>施設名:</strong> <span th:text="${company.companyName} ?: ''"></span></p>
@@ -79,11 +79,11 @@
     <script>
         function startChat(userId) {
             console.log("Starting chat with user ID:", userId);
-            fetch(`/getChatGroupId?userId=${userId}`)
+            fetch(`/Matching/getChatGroupId?userId=${userId}`)
                 .then(response => response.json())
                 .then(data => {
                     if (data && data.chatGroupId && data.chatGroupId !== -1) {
-                        window.location.href = `/chat?chatGroupId=${data.chatGroupId}`;
+                        window.location.href = `/Matching/chat?chatGroupId=${data.chatGroupId}`;
                     } else {
                         console.error('Error: chatGroupId not found');
                     }
@@ -92,7 +92,7 @@
         }
 
         document.getElementById('backButton').addEventListener('click', function() {
-            window.location.href = '/companyIndex';
+            window.location.href = '/Matching/companyIndex';
         });
     </script>
 </body>
